[gd_scene load_steps=3 format=3 uid="uid://cf76yjmqmhyiw"]

[ext_resource type="Script" uid="uid://c1v3uq5r26kj4" path="res://scripts/pause_menu.gd" id="1_hg4t4"]
[ext_resource type="AudioStream" uid="uid://b3g3vso8s6i4q" path="res://resources/sfx/Menu Selection Click.wav" id="2_myx47"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hg4t4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.729412, 1, 0.290196)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game paused"

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume
"

[node name="QuitButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit
"

[node name="Sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_myx47")
volume_db = 10.0

[connection signal="focus_entered" from="GridContainer/ResumeButton" to="." method="_on_button_focus_changed"]
[connection signal="mouse_entered" from="GridContainer/ResumeButton" to="." method="_on_resume_button_mouse_entered"]
[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="focus_entered" from="GridContainer/QuitButton" to="." method="_on_button_focus_changed"]
[connection signal="mouse_entered" from="GridContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="GridContainer/QuitButton" to="." method="_on_quit_button_pressed"]
